--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,33 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %} 黑科校际PRO{% endblock %}
-
+{% import "_macros.html" as macros %}
 
 {% block page_content %}
-    <div class="page-header">
-        <h1>Welcome! My Friend</h1>
-        <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
-        <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
-    </div>
+<div class="page-header">
+    <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
+</div>
+<div>
+    {% if current_user.can(Permission.WRITE_ARTICLES) %}
+        {{ wtf.quick_form(form) }}
+    {% endif %}
+</div>
+<div class="post-tabs">
+{#    <ul class="nav nav-tabs">#}
+{#        <li{% if not show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">All</a></li>#}
+{#        {% if current_user.is_authenticated %}#}
+{#        <li{% if show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_followed') }}">Followers</a></li>#}
+{#        {% endif %}#}
+{#    </ul>#}
+    {% include '_posts.html' %}
+</div>
+{% if pagination %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.index') }}
+</div>
+{% endif %}
+{% endblock %}
 
-    <div class="page-header">
-        <h1>Hello, {% if current_user.is_authenticated %} {{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
-    </div>
-{{ wtf.quick_form(form) }}
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
 {% endblock %}
