--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{#{% import "_macros.html" as macros %}#}
+{% import "_macros.html" as macros %}
 
 {% block title %}Flasky - {{ user.username }}{% endblock %}
 
@@ -9,17 +9,33 @@
     <div class="profile-header">
         <h1>{{ user.username }}</h1>
         {% if user.name or user.location %}
-        <p>
-            {% if user.name %}{{ user.name }}<br>{% endif %}
-            {% if user.location %}
-                From <a href="http://maps.google.com/?q={{ user.location }}">{{ user.location }}</a><br>
-            {% endif %}
-        </p>
+{#        <p>#}
+{#            {% if user.name %}{{ user.name }}<br>{% endif %}#}
+{#            {% if user.location %}#}
+{#                From <a href="http://maps.google.com/?q={{ user.location }}">{{ user.location }}</a><br>#}
+{#            {% endif %}#}
+{#        </p>#}
         {% endif %}
-        {% if current_user.is_administrator() %}
+        {% if current_user.is_administrator %}
         <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
         {% endif %}
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+{#        <p>Member since {{ moment(user.member_since).format('L') }}. Last seen {{ moment(user.last_seen).fromNow() }}.</p>#}
+{#        <p>{{ user.posts.count() }} blog posts. {{ user.comments.count() }} comments.</p>#}
+{#        <p>#}
+{#            {% if current_user.can(Permission.FOLLOW) and user != current_user %}#}
+{#                {% if not current_user.is_following(user) %}#}
+{#                <a href="{{ url_for('.follow', username=user.username) }}" class="btn btn-primary">Follow</a>#}
+{#                {% else %}#}
+{#                <a href="{{ url_for('.unfollow', username=user.username) }}" class="btn btn-default">Unfollow</a>#}
+{#                {% endif %}#}
+{#            {% endif %}#}
+{#            <a href="{{ url_for('.followers', username=user.username) }}">Followers: <span class="badge">{{ user.followers.count() - 1 }}</span></a>#}
+{#            <a href="{{ url_for('.followed_by', username=user.username) }}">Following: <span class="badge">{{ user.followed.count() - 1 }}</span></a>#}
+{#            {% if current_user.is_authenticated and user != current_user and user.is_following(current_user) %}#}
+{#            | <span class="label label-default">Follows you</span>#}
+{#            {% endif %}#}
+{#        </p>#}
         <p>
             {% if user == current_user %}
             <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
@@ -30,4 +46,11 @@
         </p>
     </div>
 </div>
+<h3>Posts by {{ user.username }}</h3>
+{% include '_posts.html' %}
+{% if pagination %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+</div>
+{% endif %}
 {% endblock %}
