add post comment function

--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -8,11 +8,11 @@
 {% include '_posts.html' %}
 <h4 id="comments">Comments</h4>
 {% if current_user.can(Permission.COMMENT) %}
-{#    <div class="comment-form">#}
-{#        {{ wtf.quick_form(form) }}#}
-{#    </div>#}
+    <div class="comment-form">
+        {{ wtf.quick_form(form) }}
+    </div>
 {% endif %}
-{#{% include '_comments.html' %}#}
+{% include '_comments.html' %}
 {% if pagination %}
 <div class="pagination">
     {{ macros.pagination_widget(pagination, '.post', fragment='#comments', id=posts[0].id) }}
